# realm-retrieve

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUES.md  LICENSE  MANIFEST.in  Makefile  README.md  ROADMAP.md  SECURITY.md  evaluate.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  train_policy.py  train_segmentation.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_NOTES_v1.0.0.md  dependabot.yml
.github/DISCUSSION_DRAFTS/: README.md
.github/DISCUSSION_DRAFTS/announcements/: 01-v1.0.0.md
.github/DISCUSSION_DRAFTS/general/: 01-welcome.md
.github/DISCUSSION_DRAFTS/ideas/: 01-whats-next.md
.github/DISCUSSION_DRAFTS/q-and-a/: 01-troubleshooting.md
.github/DISCUSSION_DRAFTS/show-and-tell/: 01-template.md
.github/ISSUE_DRAFTS/: README.md
.github/ISSUE_DRAFTS/closed/: 0001-hydra-config-path.md  0002-empty-episode-crash.md  0003-lazy-heavy-imports.md  0004-missing-experiment-configs.md  0005-rsus-weight-validation.md  01-hydra-config-path.md  02-train-policy-empty-episode.md  03-heavy-imports.md  04-missing-experiments-configs.md  05-rsus-weights-validation.md
.github/ISSUE_DRAFTS/open/: 0006-pep604-type-hints.md  0007-cpu-smoke-test.md  0008-retriever-protocol.md  0009-multilingual-rsus.md  0010-hf-space-playground.md  0011-package-layout-drift.md  0012-mkdocs-nav-mismatch.md  0013-line-endings-crlf-warnings.md  0014-dependabot-vuln-flood.md  0015-mypy-strict-mode.md  06-modernize-type-hints.md  07-cpu-smoke-test-pipeline.md  08-retriever-protocol.md  09-multilingual-rsus.md  10-huggingface-space.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  python-publish.yml  sync-wiki.yml
changelog/: index.html
concepts/policy/: index.html
concepts/retrieval/: index.html
concepts/rsus/: index.html
configs/experiments/: evaluate.yaml  train_policy.yaml  train_segmentation.yaml
contributing/: index.html
docs/: index.md  inference.md  install.md  quickstart.md
docs/concepts/: policy.md  retrieval.md  rsus.md
docs/reference/: api.md
docs/wiki/: Architecture.md  Citation.md  FAQ.md  Glossary.md  Home.md  README.md  Reproducibility.md  Roadmap.md  _Footer.md  _Sidebar.md
examples/: README.md  bench_plot.py  quickstart.py
inference/: index.html
install/: index.html
notebooks/: 01_quickstart.ipynb  README.md
paper/: references.bib  sigir26_fp168_camera_ready.bbl  sigir26_fp168_camera_ready.tex
quickstart/: index.html
reference/api/: index.html
scripts/: README.md  seed_discussions.py  seed_issues.ps1  seed_issues.py  seed_issues.sh  sync_wiki.sh
search/: search_index.json
src/: __init__.py  cli.py  toy.py
src/evaluation/: metrics.py
src/models/: __init__.py  policy.py  reasoning_model.py  retriever.py  rsus.py
src/realm_retrieve/evaluation/: __init__.py
src/realm_retrieve/models/: __init__.py  reasoning_model.py  retriever.py  rsus.py  segmentation.py
tests/: conftest.py  test_cli.py  test_imports.py  test_metrics.py  test_policy_trainer.py  test_rsus.py  test_rsus_validation.py  test_toy_pipeline.py  test_toy_retriever.py
