[build-system]
requires = ["setuptools>=65.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "realm-retrieve"
version = "1.0.0"
description = "ReaLM-Retrieve: Adaptive Retrieval for Large Reasoning Models"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anonymous Author(s)", email = ""},
]
keywords = [
    "information-retrieval",
    "retrieval-augmented-generation",
    "large-reasoning-models",
    "multi-hop-qa",
    "adaptive-retrieval",
    "uncertainty-quantification",
    "reinforcement-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    # Core ML/DL
    "torch>=2.1.0,<2.3.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    
    # Reasoning Model APIs
    "openai>=1.10.0",
    "anthropic>=0.8.0",
    
    # vLLM for efficient LLM inference
    "vllm>=0.2.6",
    
    # Retrieval (ColBERTv2 + PLAID/WARP)
    "colbert-ai>=0.2.0",
    "faiss-gpu>=1.7.2",
    "sentence-transformers>=2.2.0",
    
    # NLP utilities
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    
    # Data processing
    "datasets>=2.16.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    
    # Evaluation metrics
    "pytrec-eval>=0.5",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    
    # RL training (REINFORCE)
    "stable-baselines3>=2.2.0",
    "gymnasium>=0.29.0",
    
    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0",
    
    # Logging & monitoring
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "jsonlines>=4.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ipython>=8.19.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]

docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.0",
    "myst-parser>=2.0.0",
]

all = [
    "realm-retrieve[dev,docs]",
]

[project.urls]
"Homepage" = "https://anonymous.4open.science/r/realm-retrieve"
"Bug Tracker" = "https://anonymous.4open.science/r/realm-retrieve/issues"
"Documentation" = ""

[project.scripts]
realm-train-segmentation = "realm_retrieve.training.train_segmentation:main"
realm-train-policy = "realm_retrieve.training.train_policy:main"
realm-evaluate = "realm_retrieve.evaluation.evaluate:main"
realm-inference = "realm_retrieve.inference:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["realm_retrieve*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | data
  | checkpoints
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["realm_retrieve"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "colbert.*",
    "pytrec_eval.*",
    "spacy.*",
    "vllm.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=realm_retrieve",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/realm_retrieve"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
